feat: Sprint 5 (Jira integration) + Sprint 6 (What-If simulations, reports, dashboard)
Sprint 5:
- JiraClient with WebClient for Jira REST API v3
- JiraConnector: all 6 TaskTrackerConnector methods implemented
- ExternalIssueMapper: JiraIssue/ExternalSprint mapping
- ImportService/ExportService: connector lookup via Map
- IntegrationController: path fix, testConnection endpoint
- FeatureRepository/TeamRepository: findByExternalId
- 20 unit tests (JiraConnectorTest, ImportServiceTest, ExternalIssueMapperTest)

Sprint 6:
- PlanningResult persistence: entity, repository, service, controller
- PlanningJobService.storeResult() integrated into job completion
- SimulationController: /simulations/run, /simulations/compare
- ComparisonService with TimelineDiff and TeamLoadDiff
- DashboardService: real conflicts/timeline data, DB view endpoints
- ReportController: CSV export for features
- Web UI: SimulationPage wired to API, PlanComparison enhanced
- planningApi: runSimulation, compareResults methods